# openclaw_media_hub

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  ai_claude_openclaw_workshop_plan_v2.md  check-env.ps1  check-env.sh  claude-skill.md  docker-compose.yml  fix-plugin.ps1  fix-plugin.sh  init-openclaw.ps1  init-openclaw.sh  install-plugins.ps1  install-plugins.sh  install_skill_hub.ps1  install_skill_hub.sh  main.py  openclaw-Docker.md  openclaw-docker.ps1  openclaw-docker.sh  openclaw-skill.md  openclaw.ps1  openclaw.sh  pencil.pen  prerequisites.md  profile.md  pyproject.toml  指南.md
3.問題處理完成報告/: 1.OpenClaw-Docker部署問題報告.md  2.OpenClaw-Gateway-Token與Pairing認證問題報告.md  3.OpenClaw-Agent-API-Key設定與Volume掛載問題報告.md  4.OpenClaw-初始化腳本與設定檔格式問題報告.md  5.OpenClaw-Gateway綁定位址導致Docker端口轉發失敗報告.md  6.OpenClaw-WebSocket連線DevicePairing配對問題報告.md  7.OpenClaw-Google-Calendar-API授權與gws-CLI整合問題報告.md  8.OpenClaw-calendar-booking-skill-建置與OAuth2授權除錯.md  9.OpenClaw-auth-profiles-JSON格式錯誤導致API金鑰無法識別.md
VibeCoding_Standards/: 100_workflow_manual.md  101_project_structure_guide.md  102_api_design_standards.md  103_frontend_guidelines.md  104_development_cookbook.md  105_bdd_guide.md  106_code_review_guide.md  107_security_checklist.md  108_ops_guide.md
VibeCoding_Templates/: 200_project_brief_prd.md  201_wbs_plan.md  202_architecture_design.md  203_adr.md  204_module_spec.md  205_class_relationships.md  206_file_dependencies.md  207_api_spec.md  208_frontend_specification.md  209_bdd_feature.md  AI_CONTEXT.md
docs/: 200_project_brief_prd.md  201_wbs_plan.md  202_architecture_design.md  (+3 more)
(+232 files in other folders)
