[project]
name = "openclaw-gui"
version = "0.1.0"
description = "OpenClaw GUI - PyWebView Bridge desktop application"
requires-python = ">=3.12"
dependencies = [
    "pywebview>=5.0",
    "keyring>=25.0",
]

[project.scripts]
openclaw-gui = "src.main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
