[project]
name = "openclaw-gui"
version = "0.1.0"
description = "OpenClaw GUI - PyWebView Bridge Application"
requires-python = ">=3.11"
dependencies = [
    "pywebview>=5.0",
    "paramiko>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
